feat: average to student on menu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+logging.level.org.springframework=OFF
+logging.level.org.hibernate=OFF
+spring.main.banner-mode=off
+logging.level.root=OFF
+logging.level.org.apache.catalina=OFF
